WIP: New version of Cayenne project XML: clean tests